<resources>
    <string name="app_name">List of URLs</string>
    <string name="add_url">ADD URL</string>
    <string name="my_list_of_urls">My List of URLs</string>
    <string name="please_enter_the_url">Please Enter the URL</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Login</string>
    <string name="please_enter_the_username">pls enter the username</string>
    <string name="please_enter_the_password">pls enter the password</string>
    <string name="welcome_to_my_list_of_urls">Welcome to My List of URLs</string>
</resources>